--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "clipboard": "^2.0.6",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
-    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
     "purgecss": "^2.3.0",
+    "sass": "^1.64.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   }
