--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
-  "name": "deventy",
-  "version": "1.3.0",
-  "description": "A minimal 11ty starter with modern tools",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf dist",
-    "eleventy:default": "npx eleventy",
-    "eleventy:watch": "npx eleventy --watch",
-    "styles:prod": "node-sass src/styles/ --output dist/styles/ && postcss ./dist/styles/*.css --replace",
-    "styles:dev": "node-sass src/styles/ --output dist/styles/ --source-map true --source-map-contents true && postcss ./dist/styles/*.css --replace",
-    "scripts:prod": "webpack --mode=production",
-    "scripts:dev": "webpack --mode=development",
-    "serve": "light-server -c .lightserverrc",
-    "dev": "npm-run-all clean styles:dev scripts:dev eleventy:default --parallel eleventy:watch serve --print-label",
-    "dev:debug": "DEBUG=* npm run dev",
-    "build": "run-s clean styles:prod scripts:prod eleventy:default --print-label"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://ianrose@github.com/ianrose/deventy.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ianrose/deventy/issues"
-  },
-  "homepage": "https://github.com/ianrose/deventy#readme",
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
-    "light-server": "2.6.4"
-  },
-  "dependencies": {
-    "@11ty/eleventy": "^0.9.0",
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "acorn": "^7.3.1",
-    "autoprefixer": "^9.8.4",
-    "babel-loader": "^8.1.0",
-    "clipboard": "^2.0.6",
-    "cssnano": "^4.1.10",
-    "cssnano-preset-advanced": "^4.0.7",
-    "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.3",
-    "purgecss": "^2.3.0",
-    "sass": "^1.64.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
-  }
+	"name": "deventy",
+	"version": "1.3.0",
+	"description": "A minimal 11ty starter with modern tools",
+	"main": "index.js",
+	"scripts": {
+		"format": "prettier --write .",
+		"clean": "rm -rf dist",
+		"eleventy:default": "npx eleventy",
+		"eleventy:watch": "npx eleventy --watch",
+		"styles:prod": "node-sass src/styles/ --output dist/styles/ && postcss ./dist/styles/*.css --replace",
+		"styles:dev": "node-sass src/styles/ --output dist/styles/ --source-map true --source-map-contents true && postcss ./dist/styles/*.css --replace",
+		"scripts:prod": "webpack --mode=production",
+		"scripts:dev": "webpack --mode=development",
+		"serve": "light-server -c .lightserverrc",
+		"dev": "npm-run-all clean styles:dev scripts:dev eleventy:default --parallel eleventy:watch serve --print-label",
+		"dev:debug": "DEBUG=* npm run dev",
+		"build": "run-s clean styles:prod scripts:prod eleventy:default --print-label"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://ianrose@github.com/ianrose/deventy.git"
+	},
+	"author": "",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/ianrose/deventy/issues"
+	},
+	"homepage": "https://github.com/ianrose/deventy#readme",
+	"devDependencies": {
+		"@fullhuman/postcss-purgecss": "^2.3.0",
+		"light-server": "2.6.4",
+		"prettier": "^3.0.1"
+	},
+	"dependencies": {
+		"@11ty/eleventy": "^0.9.0",
+		"@babel/core": "^7.10.4",
+		"@babel/preset-env": "^7.10.4",
+		"acorn": "^7.3.1",
+		"autoprefixer": "^9.8.4",
+		"babel-loader": "^8.1.0",
+		"clipboard": "^2.0.6",
+		"cssnano": "^4.1.10",
+		"cssnano-preset-advanced": "^4.0.7",
+		"npm-run-all": "^4.1.5",
+		"postcss-cli": "^6.1.3",
+		"purgecss": "^2.3.0",
+		"sass": "^1.64.2",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.12"
+	}
 }
