--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-	"name": "deventy",
-	"version": "1.3.0",
-	"description": "A minimal 11ty starter with modern tools",
-	"main": "index.js",
+	"name": "mailtolink",
+	"version": "2.0.0",
+	"description": "A quick and easy way to generate mailto links.",
 	"scripts": {
 		"format": "prettier --write .",
-		"clean": "rm -rf dist",
+		"clean": "rimraf dist",
 		"eleventy:default": "npx eleventy",
 		"eleventy:watch": "npx eleventy --watch",
 		"styles:prod": "node-sass src/styles/ --output dist/styles/ && postcss ./dist/styles/*.css --replace",
@@ -21,32 +20,27 @@
 		"type": "git",
 		"url": "git+https://ianrose@github.com/ianrose/deventy.git"
 	},
-	"author": "",
 	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/ianrose/deventy/issues"
-	},
-	"homepage": "https://github.com/ianrose/deventy#readme",
 	"devDependencies": {
-		"@fullhuman/postcss-purgecss": "^2.3.0",
-		"light-server": "2.6.4",
-		"prettier": "^3.0.1"
+		"@fullhuman/postcss-purgecss": "^5.0.0",
+		"prettier": "^3.0.1",
+		"rimraf": "^5.0.1"
 	},
 	"dependencies": {
-		"@11ty/eleventy": "^0.9.0",
-		"@babel/core": "^7.10.4",
-		"@babel/preset-env": "^7.10.4",
-		"acorn": "^7.3.1",
-		"autoprefixer": "^9.8.4",
-		"babel-loader": "^8.1.0",
-		"clipboard": "^2.0.6",
-		"cssnano": "^4.1.10",
-		"cssnano-preset-advanced": "^4.0.7",
+		"@11ty/eleventy": "^2.0.1",
+		"@babel/core": "^7.22.9",
+		"@babel/preset-env": "^7.22.9",
+		"acorn": "^8.10.0",
+		"autoprefixer": "^10.4.14",
+		"babel-loader": "^9.1.3",
+		"clipboard": "^2.0.11",
+		"cssnano": "^6.0.1",
+		"cssnano-preset-advanced": "^6.0.1",
 		"npm-run-all": "^4.1.5",
-		"postcss-cli": "^6.1.3",
-		"purgecss": "^2.3.0",
+		"postcss-cli": "^10.1.0",
+		"purgecss": "^5.0.0",
 		"sass": "^1.64.2",
-		"webpack": "^4.43.0",
-		"webpack-cli": "^3.3.12"
+		"webpack": "^5.88.2",
+		"webpack-cli": "^5.1.4"
 	}
 }
