--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-_site
-.sass-cache
-.jekyll-metadata
-node_modules
-assets
-optimization-fix-this-file-is-ignored.js
-yarn-error.log
-.yarnclean
+dist/
+node_modules/
 .DS_Store
-
-# editors
-.idea
