--- a/package.json
+++ b/package.json
@@ -5,16 +5,8 @@
 	"scripts": {
 		"format": "prettier --write .",
 		"clean": "rimraf dist",
-		"eleventy:default": "npx eleventy",
-		"eleventy:watch": "npx eleventy --watch",
-		"styles:prod": "node-sass src/styles/ --output dist/styles/ && postcss ./dist/styles/*.css --replace",
-		"styles:dev": "node-sass src/styles/ --output dist/styles/ --source-map true --source-map-contents true && postcss ./dist/styles/*.css --replace",
-		"scripts:prod": "webpack --mode=production",
-		"scripts:dev": "webpack --mode=development",
-		"serve": "light-server -c .lightserverrc",
-		"dev": "npm-run-all clean styles:dev scripts:dev eleventy:default --parallel eleventy:watch serve --print-label",
-		"dev:debug": "DEBUG=* npm run dev",
-		"build": "run-s clean styles:prod scripts:prod eleventy:default --print-label"
+		"dev": "eleventy --serve",
+		"build": "eleventy"
 	},
 	"repository": {
 		"type": "git",
