--- a/.prettierrc
+++ b/.prettierrc
@@ -3,13 +3,5 @@
 	"printWidth": 80,
 	"trailingComma": "all",
 	"semi": true,
-	"singleQuote": true,
-	"overrides": [
-		{
-			"files": "**/*.{yml,yaml}",
-			"options": {
-				"singleQuote": false
-			}
-		}
-	]
+	"singleQuote": true
 }
