--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://ianrose@github.com/ianrose/deventy.git"
+		"url": "https://github.com/uncenter/mailtolink.git"
 	},
 	"license": "MIT",
-	"devDependencies": {
-		"@fullhuman/postcss-purgecss": "^5.0.0",
-		"prettier": "^3.0.1",
-		"rimraf": "^5.0.1"
-	},
+	"contributors": [
+		{
+			"name": "uncenter",
+			"url": "https://uncenter.dev"
+		},
+		{
+			"name": "Michael Mckeever"
+		}
+	],
 	"dependencies": {
 		"@11ty/eleventy": "^2.0.1",
-		"@babel/core": "^7.22.9",
-		"@babel/preset-env": "^7.22.9",
-		"acorn": "^8.10.0",
 		"autoprefixer": "^10.4.14",
-		"babel-loader": "^9.1.3",
 		"clipboard": "^2.0.11",
 		"cssnano": "^6.0.1",
 		"cssnano-preset-advanced": "^6.0.1",
-		"npm-run-all": "^4.1.5",
-		"postcss-cli": "^10.1.0",
 		"purgecss": "^5.0.0",
-		"sass": "^1.64.2",
-		"webpack": "^5.88.2",
-		"webpack-cli": "^5.1.4"
+		"sass": "^1.64.2"
+	},
+	"devDependencies": {
+		"prettier": "^3.0.1",
+		"rimraf": "^5.0.1"
 	}
 }
