--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
 	],
 	"dependencies": {
 		"@11ty/eleventy": "^2.0.1",
+		"@fullhuman/postcss-purgecss": "^5.0.0",
 		"autoprefixer": "^10.4.14",
-		"clipboard": "^2.0.11",
 		"cssnano": "^6.0.1",
-		"cssnano-preset-advanced": "^6.0.1",
+		"postcss": "^8.4.28",
 		"purgecss": "^5.0.0",
 		"sass": "^1.64.2"
 	},
