--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,13 @@
 	"printWidth": 80,
 	"trailingComma": "all",
 	"semi": true,
-	"singleQuote": true
+	"singleQuote": true,
+	"overrides": [
+		{
+			"files": "**/*.njk",
+			"options": {
+				"printWidth": 100
+			}
+		}
+	]
 }
