--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	"contributors": [
 		{
 			"name": "uncenter",
-			"url": "https://uncenter.dev"
+			"url": "https://uncenter.dev",
+			"email": "hi@uncenter.dev"
 		},
 		{
 			"name": "Michael Mckeever",
@@ -38,5 +39,5 @@
 		"prettier": "^3.0.3",
 		"rimraf": "^5.0.1"
 	},
-	"packageManager": "pnpm@8.6.12"
+	"packageManager": "pnpm@8.7.6"
 }
