--- a/package.json
+++ b/package.json
@@ -2,17 +2,6 @@
 	"name": "mailtolink",
 	"version": "2.0.0",
 	"description": "A quick and easy way to generate mailto links.",
-	"scripts": {
-		"format": "prettier --write .",
-		"clean": "rimraf dist",
-		"dev": "eleventy --serve",
-		"build": "eleventy"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/uncenter/mailtolink.git"
-	},
-	"license": "MIT",
 	"contributors": [
 		{
 			"name": "uncenter",
@@ -24,6 +13,19 @@
 			"url": "https://mckvr.com"
 		}
 	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/uncenter/mailtolink.git"
+	},
+	"license": "MIT",
+	"type": "commonjs",
+	"scripts": {
+		"dev": "eleventy --serve",
+		"build": "eleventy",
+		"clean": "rimraf dist",
+		"lint": "eslint .",
+		"format": "prettier --write ."
+	},
 	"dependencies": {
 		"@11ty/eleventy": "^2.0.1",
 		"@fullhuman/postcss-purgecss": "^5.0.0",
@@ -31,13 +33,16 @@
 		"cssnano": "^6.0.1",
 		"postcss": "^8.4.31",
 		"purgecss": "^5.0.0",
-		"sass": "^1.69.0",
+		"sass": "^1.69.1",
 		"tailwindcss": "^3.3.3",
 		"terser": "^5.21.0"
 	},
 	"devDependencies": {
+		"eslint": "^8.51.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-unicorn": "^48.0.1",
 		"prettier": "^3.0.3",
 		"rimraf": "^5.0.5"
 	},
-	"packageManager": "pnpm@8.7.6"
+	"packageManager": "pnpm@8.9.0"
 }
