--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
 			"url": "https://mckvr.com"
 		}
 	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/uncenter/mailtolink.git"
-	},
+	"repository": "uncenter/mailtolink.git",
 	"license": "MIT",
 	"type": "commonjs",
 	"scripts": {
@@ -33,16 +30,16 @@
 		"cssnano": "^6.0.2",
 		"postcss": "^8.4.32",
 		"purgecss": "^5.0.0",
-		"sass": "^1.69.5",
-		"tailwindcss": "^3.3.7",
+		"sass": "^1.69.6",
+		"tailwindcss": "^3.4.0",
 		"terser": "^5.26.0"
 	},
 	"devDependencies": {
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-unicorn": "^49.0.0",
+		"eslint-plugin-unicorn": "^50.0.1",
 		"prettier": "^3.1.1",
 		"rimraf": "^5.0.5"
 	},
-	"packageManager": "pnpm@8.9.0"
+	"packageManager": "pnpm@8.13.1+sha256.9e5f62ce5f2b7d4ceb3c2848f41cf0b33032c24d683c7088b53f62b1885fb246"
 }
